# fathom_financial_agent

./: .gitignore  1.ipynb  README.md  main.py  pyproject.toml  results.md
api/: __init__.py  main.py  schemas.py  sse.py
data/audited/: financebench_audited.csv  financebench_filtered_reasoning.csv
data/filtered/: financebench_filtered.csv
data/test/: financebench_test.csv  test.jsonl
data/train/: baseline_probe_results.json  dev.jsonl  financebench_traces_train.jsonl  financebench_traces_train_cleaned.jsonl  financebench_traces_train_report.json  financebench_train.csv  probe.jsonl  splits.json  teacher_batch_input.jsonl  teacher_batch_output.jsonl  train.jsonl
docs/: 10rules.md  ard.md  data_dictionary.md  project_info.md  project_plan.md  project_rules.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Chat.tsx  ChatInput.tsx  Message.tsx  ReasoningTrace.tsx  SourcesPanel.tsx  StreamingText.tsx  VerificationBadge.tsx
frontend/hooks/: useSSEStream.ts
frontend/lib/: sse-client.ts  types.ts  utils.ts
graph/: state.py  tools.py  verify.py  workflow.py
graph/nodes/: reason.py  retrieve.py  verify.py
qlora_adapters/: adapter_config.json
results/evals/: correctness_eval.json  format_adherence.json  retrieval_eval.json  retrieval_eval_stage_a.json  retrieval_eval_stage_b.json  (+1 more)
src/: 1.ipynb  11_correctness_eval.py  11_format_adherence_eval.py  11_get_chunks.py  11_retrieval_eval.py  11_test.py  1_ingest_data.py  2_audit_data.py  3_generate_traces.py  4.4_prepare_training_data.py  4.5_baseline.ipynb  4.6_training.ipynb  4.7_validation.ipynb  4_validate_traces.py  5.1_update_adapter.py  5.2_register_adapter.py  5.3_push_to_HF.py  5_final_validation.ipynb  6.1_debug_retrieval.py  6_ingest.py  7_test_graph.py  8_test_verification.py  debug_batch.py  modal_server.py  modal_server_base.py  test_modal.py
tests/: test_verify.py
(+22 files in other folders)
